# gnome-tweaks

./: .gitignore  .gitlab-ci.yml  AUTHORS  Makefile.am  NEWS  README  README.md  alex-question.md  autogen.sh  configure.ac  gnome-tweak-tool  gnome-tweak-tool-lid-inhibitor  gnome-tweak-tool-lid-inhibitor.in  gnome-tweak-tool.desktop  gnome-tweak-tool.doap  gnome-tweaks  gnome-tweaks.doap  gtweak-hardcode-system-dirs.patch  main.py  meson-postinstall.py  meson-postinstall.sh  meson.build  org.gnome.Tweaks.json  org.gnome.tweaks.json  start-gnome-tweaks.sh  tweakmodel.py
data/: Makefile.am  gnome-tweak-tool.appdata.xml  gnome-tweak-tool.appdata.xml.in  gnome-tweak-tool.desktop  gnome-tweak-tool.desktop.in  meson.build  org.gnome.tweaks.appdata.xml.in  org.gnome.tweaks.desktop.in  org.gnome.tweaks.gschema.xml  org.gnome.tweaks.service.in  shell.css  shell.ui  tweaks.ui  tweaks3.ui
data/icons/: Makefile.am  meson.build
gtweak/: __init__.py  app.py  defs.py.in  devicemanager.py  egowrapper.py  gconf.py  gsettings.py  gshellwrapper.py  gtksettings.py  mainwindow.py  meson.build  tweakmodel.py  tweakview.py  utils.py  widgets.py
gtweak/tweaks/: __init__.py  tweak_font.py  tweak_group_appearance.py  tweak_group_datetime.py  tweak_group_desktop.py  tweak_group_font.py  tweak_group_general.py  tweak_group_interface.py  tweak_group_keyboard.py  tweak_group_keymouse.py  tweak_group_legacy.py  tweak_group_mouse.py  tweak_group_power.py  tweak_group_shell.py  tweak_group_shell_extensions.py  tweak_group_sound.py  tweak_group_startup.py  tweak_group_test.py  tweak_group_title_bar.py  tweak_group_top_bar.py  tweak_group_windows.py  tweak_group_workspaces.py  tweak_group_xkb.py  tweak_interface.py  tweak_legacy.py  tweak_mouse.py  tweak_nautilus.py  tweak_shell.py  tweak_shell_extensions.py  tweak_test.py  tweak_typing.py  tweak_wacom.py  tweak_windows.py
po/: LINGUAS  Makevars  POTFILES.in  ab.po  af.po  ar.po  as.po  be.po  bg.po  bs.po  ca.po  ca@valencia.po  ckb.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  eu.po  fa.po  fi.po  fr.po  fur.po  gl.po  he.po  hi.po  hr.po  hu.po  id.po  ie.po  is.po  it.po  ja.po  ka.po  kk.po  ko.po  ky.po  lt.po  (+30 more)
